fix overlapping navigation bar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -175,16 +175,6 @@ margin-right: 7px;
   Top navigation bar
 =============================*/
 
-.navbar {
-  height: 3.75rem ;  
-  background-color: none;
-  border-bottom: 0px solid #dfdfdf;
-  margin-bottom: -17px ;
-  padding-bottom: 20;
-  position: sticky;
-  transition: border-bottom 0.3s ease-in-out;
-  z-index: 1000 !important;
-}
 
 .navbar-container {
   min-width: 82%;
